# yt_summarizer

./: .env.example  .gitignore  LICENSE  Ollama-Guide.md  README.md  __init__.py  grab_transcript.py  justfile  pyproject.toml  pyright.json  run  verify_setup.py
.github/: FUNDING.yml
.justfiles/: dev.just  install.just  lint.just  test.just
research_plans/: example_llm_prompting.yaml  extract_llm_prompts_from_video.yaml  prompt_extraction.yaml
src/yt_summarizer/: cli.py  config.py  corpus.py  io_utils.py  llm.py  migrate.py  pipeline.py  research_plan.py  summarizer.py  transcript.py  utils.py
tests/: __init__.py  conftest.py  test_corpus.py  test_research_plan.py  test_yt_summarizer.py
